[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/NorthstarExpandedItalic-RaKo.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Help.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fail.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/background_music.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="DebugLabel" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -103.5
margin_right = 103.5
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "1234"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 100.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 3 )
text = "WOSK"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 2 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -51.0
custom_fonts/font = SubResource( 2 )
text = "Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthBarColorRect" type="ColorRect" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -39.9999
margin_bottom = 6.10352e-05
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenColorRect" type="ColorRect" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -39.9999
margin_bottom = 6.10352e-05
color = Color( 0.0862745, 0.4, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YellowColorRect" type="ColorRect" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -39.9999
margin_bottom = 6.10352e-05
color = Color( 0.796078, 0.823529, 0.294118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedColorRect" type="ColorRect" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -39.9999
margin_bottom = 6.10352e-05
color = Color( 0.65098, 0.231373, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" parent="." instance=ExtResource( 3 )]
offset = Vector2( 10000, 0 )
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 10000, 0 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="StartButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
